src/objects/SFHealthTechIssueLog__c.object
<CustomObject>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpactedAreas__c</fullName>
        <label>Impacted Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>Availity PDM</fullName>
                </value>
                <value>
                    <fullName>Email to case</fullName>
                </value>
                <value>
                    <fullName>eVips/Vistar</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Manual ADC/CRM</fullName>
                </value>
                <value>
                    <fullName>Manual On boarding</fullName>
                </value>
                <value>
                    <fullName>Mass Case closure</fullName>
                </value>
                <value>
                    <fullName>Mass Credentialing update</fullName>
                </value>
                <value>
                    <fullName>Mass CRM Case creation</fullName>
                </value>
                <value>
                    <fullName>Mass IL Roster</fullName>
                </value>
                <value>
                    <fullName>Provider Account Data</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>RightFax</fullName>
                </value>
                <value>
                    <fullName>UCR</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Web Demographic case</fullName>
                </value>
                <value>
                    <fullName>Web On boarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IssueSummary__c</fullName>
        <label>Issue Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IssueType__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Data Errors</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Outage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JiraURL__c</fullName>
        <label>Jira URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>&apos;Medium&apos;</defaultValue>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highest</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportedState__c</fullName>
        <defaultValue>IF(CONTAINS($UserRole.Name, &quot;Illinois&quot;) || $UserRole.Name = &quot;Provider Data Rep- IL&quot; , &quot;Illinois&quot;, 
			IF(CONTAINS($UserRole.Name, &quot;Montana&quot;) || $UserRole.Name = &quot;Provider Data Rep- MT&quot; , &quot;Montana&quot;, 
			IF(CONTAINS($UserRole.Name, &quot;New Mexico&quot;) || $UserRole.Name = &quot;Provider Data Rep- NM&quot; , &quot;New Mexico&quot;, 
			IF(CONTAINS($UserRole.Name, &quot;Oklahoma&quot;) || $UserRole.Name = &quot;Provider Data Rep- OK&quot; , &quot;Oklahoma&quot;, 
			IF(CONTAINS($UserRole.Name, &quot;Texas&quot;) || $UserRole.Name = &quot;Provider Data Rep- TX&quot; , &quot;Texas&quot;, 
			&quot;&quot;)))))</defaultValue>
        <label>Reported State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCSC_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SF Health Tech Issue Log</label>
    <listViews>
        <fullName>In_Progress_with_JIRA</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>IssueType__c</columns>
        <columns>IssueSummary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <filters>
            <field>JiraURL__c</field>
            <operation>notContain</operation>
            <value>PPN</value>
        </filters>
        <label>Open Issues without JIRA</label>
    </listViews>
    <listViews>
        <fullName>SFHealthTechIssueLog_SFHealthTechIssueLog</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>IssueType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>SF Health Tech Issue Log</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SF_HT_Log_Closed</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ImpactedAreas__c</columns>
        <columns>IssueType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>SF HT Log Closed</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Health Tech Issue Logs</pluralLabel>
    <recordTypes>
        <fullName>SFHealthTechIssueLog</fullName>
        <active>true</active>
        <label>SF Health Tech Issue Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>